Grammer
program            -> statement_list

statement_list     -> statement
                    | statement_list statement

statement          -> if_statement
                    | for_loop
                    | while_loop
                    | do_while_loop
                    | print_statement
                    | scan_statement
                    | function_definition
                    | assignment_statement
                    | declaration_statement
                    | return_statement

if_statement       -> 'siru' expression 'idam' statement_list 'mudhala'
                    | 'siru' expression 'idam' statement_list 'mudhala' 'koodal' statement_list 'mudhala'
                    | 'siru' expression 'ippathaal' expression 'idam' statement_list 'mudhala'
                    | 'siru' expression 'ippathaal' expression 'idam' statement_list 'mudhala' 'koodal' statement_list 'mudhala'

for_loop           -> 'niyal' identifier 'athu' expression 'varai' expression 'paadhai' expression 'idam' statement_list 'mudhala'

while_loop        -> 'Mm' expression 'idam' statement_list 'mudhala'

do_while_loop     -> 'ye_mm' 'idam' statement_list 'Mm' expression 'mudhala'

print_statement   -> 'Paaru' expression_list ';'

scan_statement    -> 'sollu' identifier ';'

function_definition -> 'athu' identifier '(' parameter_list ')' '{' statement_list '}'

assignment_statement -> identifier '=' expression ';'

declaration_statement -> 'moolyam' identifier '=' expression ';'
                      | 'varisai' identifier '=' expression ';'
                      | 'vaathiyar' identifier '=' expression ';'
                      | 'pali' identifier '=' expression ';'
                      | 'solluvai' identifier '=' expression ';'

return_statement  -> 'annippadu' expression ';'

expression_list   -> expression
                    | expression_list ',' expression

expression         -> logical_or

logical_or         -> logical_and
                    | logical_or 'thodarai' logical_and

logical_and        -> equality
                    | logical_and 'mudhal' equality

equality           -> comparison
                    | equality 'ilakkiya' comparison
                    | equality 'vazhuthu' comparison

comparison         -> addition
                    | comparison 'yaavum' addition
                    | comparison 'periya' addition
                    | comparison 'periya_an' addition
                    | comparison 'kaattu' addition
                    | comparison 'kaattu_an' addition

addition           -> multiplication
                    | addition 'seru' multiplication
                    | addition 'kora' multiplication

multiplication     -> exponentiation
                    | multiplication 'ona' exponentiation
                    | multiplication 'piri' exponentiation

exponentiation     -> unary
                    | exponentiation 'mey' unary

unary              -> primary
                    | 'seru' unary
                    | 'kora' unary

primary            -> integer
                    | float
                    | string
                    | char
                    | boolean
                    | identifier
                    | '(' expression ')'
